[package]
name = "moonbois_core"
version = "0.2.1"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
solana-sdk = "2.1.13"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["json"] }
url = "2.5.4"
tokio-tungstenite = "0.26.2"
pin-project = "1.1.9"
tokio = "1.43.0"